chore: Finalize styles, remove scrollbar, and fix overflow

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -96,6 +96,8 @@
     width: 100%;
     margin-top: 60px;
     height: 450px;
+    overflow: hidden;
+    /* Ensure slider doesn't overflow */
 }
 
 .about-swiper {
